<?xml version="1.0" encoding="utf-8"?>

<!-- Josiah -->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E68664"
    tools:context=".recipes.RecipeCardActivity">

    <TextView
        android:id="@+id/txtTitle"
        android:layout_width="0dp"
        android:layout_height="67dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/round_btn"
        android:backgroundTint="#CE5151"
        android:fontFamily="@font/inter"
        android:gravity="center|center_horizontal|center_vertical"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />



    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTitle">

        <TextView
            android:id="@+id/radioGroupHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter"
            android:gravity="center"
            android:text="@string/recipe_category"
            android:inputType="none"
            android:textColor="#000000"
            android:textSize="18sp"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/radioButtonBreakfast"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginTop="5dp"
            android:checked="false"
            android:clickable="false"
            android:tag="radioButtonBreakfast"
            android:fontFamily="@font/inter"
            android:text="@string/breakfast"
            android:textSize="18sp"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/radioButtonLunch"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginTop="5dp"
            android:checked="false"
            android:clickable="false"
            android:tag="radioButtonLunch"
            android:fontFamily="@font/inter"
            android:text="@string/lunch"
            android:textSize="18sp"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/radioButtonDinner"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginTop="5dp"
            android:checked="false"
            android:clickable="false"
            android:tag="radioButtonDinner"
            android:fontFamily="@font/inter"
            android:text="@string/dinner"
            android:textSize="18sp"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/radioButtonDessert"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginTop="5dp"
            android:checked="false"
            android:clickable="false"
            android:tag="radioButtonDessert"
            android:fontFamily="@font/inter"
            android:text="@string/dessert"
            android:textSize="18sp"
            android:textStyle="bold" />
    </RadioGroup>

    <ImageView
        android:id="@+id/recipeImage"
        android:layout_width="177dp"
        android:layout_height="168dp"
        android:layout_marginTop="12dp"
        android:contentDescription="@string/food_image"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.714"
        app:layout_constraintStart_toEndOf="@+id/radioGroup"
        app:layout_constraintTop_toBottomOf="@+id/txtTitle"
        app:srcCompat="@android:drawable/ic_menu_camera" />

    <TextView
        android:id="@+id/ingredientsTitle"
        android:layout_width="169dp"
        android:layout_height="39dp"
        android:layout_marginStart="120dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/round_btn"
        android:backgroundTint="#CE5151"
        android:fontFamily="@font/inter"
        android:gravity="center|center_horizontal|center_vertical"
        android:text="@string/ingredients"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recipeImage" />

    <EditText
        android:id="@+id/txtIngredients"
        android:layout_width="333dp"
        android:layout_height="98dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="12dp"
        android:autofillHints="name"
        android:background="#FFFFFF"
        android:editable="false"
        android:ems="10"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:fontFamily="@font/inter"
        android:inputType="none"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ingredientsTitle"
        tools:ignore="LabelFor,SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/stepsTitle"
        android:layout_width="169dp"
        android:layout_height="39dp"
        android:layout_marginStart="120dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/round_btn"
        android:backgroundTint="#CE5151"
        android:fontFamily="@font/inter"
        android:gravity="center|center_horizontal|center_vertical"
        android:text="@string/steps"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtIngredients" />

    <EditText
        android:id="@+id/txtSteps"
        android:layout_width="330dp"
        android:layout_height="94dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="12dp"
        android:autofillHints="name"
        android:background="#FFFFFF"
        android:editable="false"
        android:ems="10"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:fontFamily="@font/inter"
        android:inputType="none"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/stepsTitle"
        tools:ignore="LabelFor,SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    <Button
        android:id="@+id/btnFavorite"
        android:layout_width="135dp"
        android:layout_height="48dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="19dp"
        android:background="@drawable/round_btn"
        android:backgroundTint="#CE5151"
        android:fontFamily="@font/inter"
        android:text="@string/favorite"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtSteps" />

    <Button
        android:id="@+id/btnBack"
        android:layout_width="135dp"
        android:layout_height="48dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="19dp"
        android:background="@drawable/round_btn"
        android:backgroundTint="#CE5151"
        android:fontFamily="@font/inter"
        android:text="@string/back"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtSteps" />

</androidx.constraintlayout.widget.ConstraintLayout>
