<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E68664"
    tools:context=".recipes.SavedRecipesActivity">

    <TextView
        android:id="@+id/header"
        android:layout_width="0dp"
        android:layout_height="67dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/round_btn"
        android:backgroundTint="#CE5151"
        android:fontFamily="@font/inter"
        android:gravity="center|center_horizontal|center_vertical"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="38sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <TextView
        android:id="@+id/title"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="50dp"
        android:layout_marginLeft="50dp"
        android:background="@drawable/button_title"
        android:backgroundTint="#FFBA79"
        android:fontFamily="@font/inter"
        android:gravity="center|center_horizontal|center_vertical"
        android:text="@string/saved_recipes_title"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/header" />

    <ProgressBar
        android:id="@+id/recipesLoadingProcess"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="164dp"
        android:layout_marginTop="220dp"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title" />

    <TextView
        android:id="@+id/recipesLoading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="5dp"
        android:text="@string/loading_recipes"
        android:textColor="#040404"
        android:textSize="15sp"
        android:textStyle="bold"
        android:typeface="sans"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recipesLoadingProcess" />

    <Button
        android:id="@+id/btnRetry"
        android:layout_width="165dp"
        android:layout_height="38dp"
        android:layout_marginStart="120dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/round_btn"
        android:backgroundTint="#CE5151"
        android:text="@string/retry_fetch"
        android:textAlignment="gravity"
        android:textColor="#000000"
        android:textStyle="bold"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recipesLoading" />

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipeToRefresh"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="25dp"
        android:layout_marginTop="25dp"
        app:layout_constraintBottom_toTopOf="@+id/btnMyRecipes"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header">

        <ListView
            android:id="@+id/recipes"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:divider="#000"
            android:dividerHeight="1dp"
            android:footerDividersEnabled="false"
            android:headerDividersEnabled="false" />
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    <Button
        android:id="@+id/btnFeed"
        android:layout_width="166dp"
        android:layout_height="69dp"
        android:onClick="toFeedPageActivity"
        android:layout_marginStart="32dp"
        android:layout_marginBottom="28dp"
        android:background="@drawable/round_btn"
        android:backgroundTint="#CE5151"
        android:text="@string/feed"
        android:textAlignment="gravity"
        android:textColor="#000000"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnMyRecipes"
        android:layout_width="166dp"
        android:layout_height="69dp"
        android:layout_marginEnd="24dp"
        android:onClick="toMyRecipesActivity"
        android:layout_marginBottom="28dp"
        android:background="@drawable/round_btn"
        android:backgroundTint="#CE5151"
        android:text="@string/my_recipes"
        android:textAlignment="gravity"
        android:textColor="#000000"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
